feat: Creacion de modal y agregacion a playlists